Update 'eum9e6jpe-go' component image to: artifactory-docker-artifactory-jcr.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-go:3f5bc8407a90980cd9a135c483c6bc147952f9aa@sha256:a400f081b7741dd1d3aca154272d623af789bc683ae84d1e89b3aa89b6262170

--- a/components/eum9e6jpe-go/overlays/development/deployment-patch.yaml
+++ b/components/eum9e6jpe-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: eum9e6jpe-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: artifactory-docker-artifactory-jcr.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-go:3f5bc8407a90980cd9a135c483c6bc147952f9aa@sha256:a400f081b7741dd1d3aca154272d623af789bc683ae84d1e89b3aa89b6262170
+          name: container-image
